fix: Google OAuth 가입 흐름 수정